# free-games-notifier

./: .gitignore  README.md  pyproject.toml  settings.toml
.github/workflows/: run-notify.yml
data/: freeGamesPromotions.sample.jsonc
src/free_games_notifier/: __init__.py  config.py  history.py  log.py  model.py  notify.py  utils.py
src/free_games_notifier/crawlers/: __init__.py  epicgames.py  log.py  notify.py  utils.py
