[project]
name = "free-games-notifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nozwock", email = "57829219+nozwock@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
    "apprise",
    "click>=8.1.8",
    "dynaconf>=3.2.10",
    "fake-useragent>=2.1.0",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
]

[project.scripts]
free-games-notifier = "free_games_notifier:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["types-requests>=2.32.0.20250306"]

[tool.uv.sources]
# https://github.com/caronc/apprise/issues/1308
apprise = { git = "https://github.com/nozwock/apprise", rev = "61c3f06797e8da571829ad51b33c908213afd743" }
